About Page: Fixed content and added spacing

--- a/scss/about.scss
+++ b/scss/about.scss
@@ -18,7 +18,7 @@ h1 {
 }
 h2 {
   font-size: 2.5em;
-  font-size: 3.8vw;
+  font-size: 3.5vw;
 }
 a {
   color: white;
@@ -39,8 +39,15 @@ body {
   font-family: 'Lato', Helvetica, Verdana, sans-serif;
   overflow-x: hidden;
 
-  h1 {
-    text-align: center;
-  }
 
+  .main {
+    height: calc(100% - 3.5em);
+    width: calc(100% - 3.5em);
+    padding: 0.5em;
+    text-align: center;
+
+    h2 {
+      margin-top: 0.5em;
+    }
+  }
 }
